Ajout du gradient pour le composant bouton

--- a/src/assets/scss/foundations/_variables.scss
+++ b/src/assets/scss/foundations/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $primaryColor: #6b4eff;
 $primaryDarkColor: #5538ee;
+$primaryGradient: linear-gradient(to right, rgb(185, 101, 187), blue); 
 $white: #fff;
 $gray100: #e3e5e5;
 $gray400: #979c9e;
